# GiG_Economy

./: README.md  contract_addresses.json
backend/: .gitignore  Cargo.toml  Makefile  README.md
backend/examples/: counter.rs
backend/src/: erc20.rs  lib.rs
frontend/: .env.example  package-lock.json  package.json  tsconfig.json
frontend/gig_economy/: index.html  package-lock.json  package.json
frontend/src/abis/: abi.json  mockerc20.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/available-task/: page.tsx
frontend/src/app/completed-task/: page.tsx
frontend/src/app/create-task/: page.tsx
frontend/src/app/rewards/: page.tsx
frontend/src/components/: floating-paper.tsx  hero.tsx  navbar.tsx  not-connected.tsx  sparkles.tsx
frontend/src/components/ui/: select.tsx
frontend/src/config/: contracts.ts  index.tsx  providers.jsx
frontend/src/context/: index.tsx
frontend/src/hooks/read-hooks/: useGetAgentReputation.tsx  useGetAgentReputationTier.tsx  useGetAllSubmissions.tsx  useGetAllTask.tsx  useGetAllTaskCounter.tsx  useGetCompletedTask.tsx  useGetCompletedTaskByAgent.tsx  useGetPoints.tsx  useGetSubmissionByDbId.tsx  useGetSubmissionsByTaskDbId.tsx  useGetTaskByDbId.tsx  useGetTaskById.tsx  (+2 more)
frontend/src/lib/: mongodb.ts
gig-economy/: Cargo.toml  address.json  mock_erc20.json
gig-economy/src/: lib.rs
mock_erc20/: Cargo.toml  Makefile  address.json  mock_erc20.json
mock_erc20/src/: lib.rs
smart_contract/: Cargo.toml  Makefile  gig1.json
smart_contract/src/: gig_economy.rs  lib.rs  main.rs  mock_erc20.rs
(+10 files in other folders)
