[package]
name = "gig-economy-marketplace"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["arbitrum", "ethereum", "stylus", "alloy", "marketplace"]
description = "Decentralized Task Marketplace on Arbitrum Stylus"

[dependencies]
alloy-primitives = {version ="0.8", default-features = false }
alloy-sol-types = { version = "0.8", default-features = false }
stylus-sdk = {version = "0.9"}
hex = { version = "0.4", default-features = false }
#motsu = "0.10.0"
openzeppelin-stylus = "0.3.0"

[dev-dependencies]
stylus-sdk = { version = "0.9", features = ["stylus-test"] }

[features]
default = ["mini-alloc"]
 export-abi = ["stylus-sdk/export-abi", "openzeppelin-stylus/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "gig-economy-marketplace"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
opt-level = 3
